Updated ArtistController, TrackDAO, Artist, ArtistTrackService